include BaseSwipeRecyclerViewFragment, BaseSwipeToRefreshFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">livedata</string>
+    <string name="up_top">UP</string>
+    <string name="no_data">No Data</string>
 </resources>
